--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/FrancoisCoding/ChatCord/issues"
   },
-  "homepage": "https://github.com/FrancoisCoding/ChatCord#readme"
+  "homepage": "https://github.com/FrancoisCoding/ChatCord#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "socket.io": "^2.3.0"
+  }
 }
